--- a/image-analysis-app/docker-compose.yml
+++ b/image-analysis-app/docker-compose.yml
@@ -14,8 +14,8 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "5173:5173"
+      - "3000:3000"
     volumes:
       - ./frontend:/app
     working_dir: /app
-    command: ["npm", "run", "dev", "--", "--host"]
+    command: ["npm", "start"]
