--- a/image-analysis-app/sam2/Dockerfile
+++ b/image-analysis-app/sam2/Dockerfile
@@ -5,13 +5,12 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y git
 
 COPY requirements.txt ./
-COPY checkpoints/ ./checkpoints/
-COPY configs/ ./configs/
-
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app ./app
+COPY checkpoints/ ./checkpoints/
+COPY configs/ ./configs/
 
-EXPOSE 8000
+EXPOSE 8001
 
-CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8001"]
