Added empty directors for the sam2 checkpoints and configs (to be added by the developer when working locally).

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,4 @@ Thumbs.db
 uploads/ 
 
 # Sam2 checkpoints
-image-analysis-app/sam2/checkpoints/*
-image-analysis-app/sam2/configs/*
+image-analysis-app/sam2/checkpoints/*.pt
