--- a/image-analysis-app/backend/Dockerfile
+++ b/image-analysis-app/backend/Dockerfile
@@ -1,17 +1,14 @@
-FROM python:3.10-slim
+FROM nvidia/cuda:12.1.1-cudnn8-runtime-ubuntu22.04
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y git
-
 COPY requirements.txt ./
-COPY checkpoints/ ./checkpoints/
-COPY configs/ ./configs/
+RUN apt-get update && apt-get install -y git && \
+    pip install --upgrade pip && \
+    pip install -r requirements.txt
 
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY app ./app
+COPY . .
 
 EXPOSE 8000
 
-CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
