--- a/image-analysis-app/docker-compose.yml
+++ b/image-analysis-app/docker-compose.yml
@@ -5,17 +5,12 @@ services:
     build: ./backend
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend/app:/app/app
     env_file:
       - .env
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
 
   frontend:
     build: ./frontend
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app
-    working_dir: /app
     command: ["npm", "start"]
