--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,10 @@ FROM nvidia/cuda:12.1.1-cudnn8-runtime-ubuntu22.04
 WORKDIR /app
 
 COPY requirements.txt ./
-RUN apt-get update && apt-get install -y git && \
-    pip install --upgrade pip && \
-    pip install -r requirements.txt
+RUN apt-get update && \
+    apt-get install -y curl git python3 python3-pip && \
+    python3 -m pip install --upgrade pip && \
+    python3 -m pip install -r requirements.txt
 
 COPY download_ckpts.sh ./
 RUN ./download_ckpts.sh
